test/mpi/errors/cxx/errhan/Makefile.am
# -*- Mode: Makefile; -*-
# vim: set ft=automake :
#
# (C) 2011 by Argonne National Laboratory.
#     See COPYRIGHT in top-level directory.
#

include $(top_srcdir)/Makefile_cxx.mtest

EXTRA_DIST = testlist

# avoid having to write many "foo_SOURCES = foo.cxx" lines
AM_DEFAULT_SOURCE_EXT = .cxx

noinst_PROGRAMS = commerrx errgetx errsetx throwtest

